fix: documentation fixes and project_sdg corrections
