# docs/swagger.json
@@ -33,7 +33,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/models.Activity"
+                                "$ref": "#/definitions/models.ActivityRequest"
                             }
                         }
                     }
@@ -134,7 +134,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.Activity"
+                            "$ref": "#/definitions/models.ActivityRequest"
                         }
                     }
                 ],
@@ -255,7 +255,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/models.Indicator"
+                                "$ref": "#/definitions/models.IndicatorRequest"
                             }
                         }
                     }
@@ -356,7 +356,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.Indicator"
+                            "$ref": "#/definitions/models.IndicatorRequest"
                         }
                     }
                 ],
@@ -454,7 +454,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/models.Location"
+                                "$ref": "#/definitions/models.LocationRequest"
                             }
                         }
                     }
@@ -555,7 +555,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.Location"
+                            "$ref": "#/definitions/models.LocationRequest"
                         }
                     }
                 ],
@@ -653,7 +653,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/models.Observation"
+                                "$ref": "#/definitions/models.ObservationRequest"
                             }
                         }
                     }
@@ -754,7 +754,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.Location"
+                            "$ref": "#/definitions/models.LocationRequest"
                         }
                     }
                 ],
@@ -853,7 +853,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.Project"
+                            "$ref": "#/definitions/models.ProjectRequest"
                         }
                     }
                 ],
@@ -959,7 +959,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.Project"
+                            "$ref": "#/definitions/models.ProjectRequest"
                         }
                     }
                 ],
@@ -1103,6 +1103,71 @@
                 }
             }
         },
+        "/project/{id}/add_sdg": {
+            "post": {
+                "description": "Adds multiple sdgs to a project by ID",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "project"
+                ],
+                "summary": "Add Sdgs",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Project ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "List of proponents",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/handlers.SdgInput"
+                            }
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "IDs of added proponents",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "type": "integer"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "ID not informed or invalid JSON",
+                        "schema": {
+                            "$ref": "#/definitions/utils.ErrorResponse"
+                        }
+                    },
+                    "404": {
+                        "description": "Project not found",
+                        "schema": {
+                            "$ref": "#/definitions/utils.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal server error",
+                        "schema": {
+                            "$ref": "#/definitions/utils.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/project/{projectId}/remove_proponent/{proponentId}": {
             "delete": {
                 "description": "Removes proponent from a project by ID",
@@ -1123,8 +1188,62 @@
                     },
                     {
                         "type": "string",
-                        "description": "Project ID",
+                        "description": "Proponent ID",
                         "name": "proponentId",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Proponent removed successfully",
+                        "schema": {
+                            "type": "boolean"
+                        }
+                    },
+                    "400": {
+                        "description": "ID not informed",
+                        "schema": {
+                            "$ref": "#/definitions/utils.ErrorResponse"
+                        }
+                    },
+                    "404": {
+                        "description": "Project not found",
+                        "schema": {
+                            "$ref": "#/definitions/utils.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal server error",
+                        "schema": {
+                            "$ref": "#/definitions/utils.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/project/{projectId}/remove_sdg/{sdgId}": {
+            "delete": {
+                "description": "Removes sdg from a project by ID",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "project"
+                ],
+                "summary": "Remove Sdg",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Project ID",
+                        "name": "projectId",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Sdg ID",
+                        "name": "sdgId",
                         "in": "path",
                         "required": true
                     }
@@ -1209,7 +1328,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.Proponent"
+                            "$ref": "#/definitions/models.ProponentRequest"
                         }
                     }
                 ],
@@ -1303,7 +1422,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.Proponent"
+                            "$ref": "#/definitions/models.ProponentRequest"
                         }
                     }
                 ],
@@ -1434,7 +1553,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.Sdg"
+                            "$ref": "#/definitions/models.SdgRequest"
                         }
                     }
                 ],
@@ -1528,7 +1647,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.Sdg"
+                            "$ref": "#/definitions/models.SdgRequest"
                         }
                     }
                 ],
@@ -1632,6 +1751,17 @@
                 }
             }
         },
+        "handlers.SdgInput": {
+            "type": "object",
+            "properties": {
+                "role": {
+                    "type": "string"
+                },
+                "sdgId": {
+                    "type": "integer"
+                }
+            }
+        },
         "models.Activity": {
             "type": "object",
             "properties": {
@@ -1670,6 +1800,23 @@
                 },
                 "updatedAt": {
                     "type": "string"
+                }
+            }
+        },
+        "models.ActivityRequest": {
+            "type": "object",
+            "properties": {
+                "description": {
+                    "type": "string"
+                },
+                "justification": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "projectID": {
+                    "type": "integer"
                 }
             }
         },
@@ -1720,6 +1867,37 @@
                 }
             }
         },
+        "models.IndicatorRequest": {
+            "type": "object",
+            "properties": {
+                "activityID": {
+                    "type": "integer"
+                },
+                "justification": {
+                    "type": "string"
+                },
+                "locationID": {
+                    "type": "integer"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "observationMethod": {
+                    "type": "string"
+                },
+                "unit": {
+                    "type": "string"
+                },
+                "valueBaseline": {
+                    "type": "number",
+                    "format": "float32"
+                },
+                "valueReference": {
+                    "type": "number",
+                    "format": "float32"
+                }
+            }
+        },
         "models.JSONB": {
             "type": "object",
             "additionalProperties": {}
@@ -1762,6 +1940,27 @@
                 }
             }
         },
+        "models.LocationRequest": {
+            "type": "object",
+            "properties": {
+                "country": {
+                    "type": "string"
+                },
+                "ecosystem": {
+                    "type": "string"
+                },
+                "extent": {
+                    "type": "number",
+                    "format": "float32"
+                },
+                "position": {
+                    "$ref": "#/definitions/models.JSONB"
+                },
+                "projectID": {
+                    "type": "integer"
+                }
+            }
+        },
         "models.Observation": {
             "type": "object",
             "properties": {
@@ -1788,6 +1987,24 @@
                 },
                 "value": {
                     "type": "number"
+                }
+            }
+        },
+        "models.ObservationRequest": {
+            "type": "object",
+            "properties": {
+                "date": {
+                    "type": "string"
+                },
+                "indicatorID": {
+                    "type": "integer"
+                },
+                "position": {
+                    "$ref": "#/definitions/models.JSONB"
+                },
+                "value": {
+                    "type": "number",
+                    "format": "float32"
                 }
             }
         },
@@ -1873,6 +2090,26 @@
                 }
             }
         },
+        "models.ProjectRequest": {
+            "type": "object",
+            "properties": {
+                "justification": {
+                    "type": "string"
+                },
+                "lifetimeEnd": {
+                    "type": "string"
+                },
+                "lifetimeStart": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "proponentID": {
+                    "type": "integer"
+                }
+            }
+        },
         "models.ProjectSdg": {
             "type": "object",
             "properties": {
@@ -1925,6 +2162,17 @@
                 }
             }
         },
+        "models.ProponentRequest": {
+            "type": "object",
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                }
+            }
+        },
         "models.Sdg": {
             "type": "object",
             "properties": {
@@ -1948,6 +2196,20 @@
                 },
                 "updatedAt": {
                     "type": "string"
+                }
+            }
+        },
+        "models.SdgRequest": {
+            "type": "object",
+            "properties": {
+                "iconURL": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "number": {
+                    "type": "integer"
                 }
             }
         },
