# internal/handlers/sdg.go
@@ -1,12 +1,13 @@
 package handlers
 
 import (
-	"arthemis-brain/internal/models"
-	"arthemis-brain/internal/utils"
 	"encoding/json"
 	"errors"
 	"log/slog"
 	"net/http"
+
+	"arthemis-brain/internal/models"
+	"arthemis-brain/internal/utils"
 
 	"github.com/go-chi/chi/v5"
 	"gorm.io/gorm"
@@ -21,7 +22,7 @@ func SdgHandler(logger *slog.Logger, db *gorm.DB) *GlobalParams {
 // @Tags         sdg
 // @Accept       json
 // @Produce      json
-// @Param        sdg  body      models.Sdg  true   "Sdg details"
+// @Param        sdg  body      models.SdgRequest  true   "Sdg details"
 // @Success      202        {boolean} true              "Sdg created successfully"
 // @Failure      400        {object}  utils.ErrorResponse "Invalid JSON or bad request"
 // @Router       /sdg/create [post]
@@ -76,7 +77,7 @@ func (g *GlobalParams) GetSdg(w http.ResponseWriter, r *http.Request) {
 // @Accept       json
 // @Produce      json
 // @Param        id         path      string            true   "Sdg ID"
-// @Param        sdg  body      models.Sdg  true   "Sdg details to update"
+// @Param        sdg  body      models.SdgRequest  true   "Sdg details to update"
 // @Success      200        {object}  models.Sdg
 // @Failure      400        {object}  utils.ErrorResponse "Invalid JSON or SdgID not found"
 // @Failure      404        {object}  utils.ErrorResponse "Sdg not found"
@@ -156,7 +157,7 @@ func (g *GlobalParams) DeleteSdg(w http.ResponseWriter, r *http.Request) {
 // @Router       /sdg/ [get]
 func (g *GlobalParams) GetAllSdgs(w http.ResponseWriter, r *http.Request) {
 	var sdgs []models.Sdg
-	res := g.db.Preload("Projects").Find(&sdgs)
+	res := g.db.Find(&sdgs)
 	if res.Error != nil {
 		if errors.Is(res.Error, gorm.ErrRecordNotFound) {
 			utils.RespondError(w, http.StatusNotFound, "Sdg not found", res.Error)
