# internal/models/sdg.go
@@ -8,3 +8,9 @@ type Sdg struct {
 	Name    string `gorm:"type:varchar(150)"`
 	IconURL string `gorm:"type:varchar(255)"`
 }
+
+type SdgRequest struct {
+	Number  int
+	Name    string
+	IconURL string
+}
